--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
  
 steps:
-- name: 'hashicorp/terraform'
+- name: 'hashicorp/terraform:0.12.6'
   args: ['init']
-- name: 'hashicorp/terraform'
+- name: 'hashicorp/terraform:0.12.6'
   args: ['plan']
